fixing unit tests and template

--- a/upup/models/cloudup/resources/addons/dns-controller.addons.k8s.io/k8s-1.6.yaml.template
+++ b/upup/models/cloudup/resources/addons/dns-controller.addons.k8s.io/k8s-1.6.yaml.template
@@ -38,16 +38,17 @@ spec:
 {{ range $arg := DnsControllerArgv }}
         - "{{ $arg }}"
 {{ end }}
+{{- if .EgressProxy -}}
         env:
 {{ range $name, $value := ProxyEnv }}
         - name: {{ $name }}
           value: {{ $value }}
 {{ end }}
+{{- end -}}
         resources:
           requests:
             cpu: 50m
             memory: 50Mi
-
 
 ---
 
