--- a/upup/models/cloudup/resources/addons/kube-dns.addons.k8s.io/k8s-1.6.yaml.template
+++ b/upup/models/cloudup/resources/addons/kube-dns.addons.k8s.io/k8s-1.6.yaml.template
@@ -56,7 +56,7 @@ spec:
           value: {{ $value }}
 {{ end }}
 {{ end }}
-      toleration::
+      toleration:
       - key: "CriticalAddonsOnly"
         operator: "Exists"
       serviceAccountName: kube-dns-autoscaler
